Contractors/istio/identityserver-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: identityserver-destination
spec:
  host: identityserver-identityserver
  subsets:
    - name: v1
      labels:
        version: v1
