Contractors/istio/identityserver-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: identityserver
spec:
  hosts:
    - "id4.ubidyapi.com"
  gateways:
    - ubidy-gateway
  http:
    - name: "identityserver-route"
      route:
        - destination:
            host: identityserver-identityserver
            subset: v1
